<resources>
    <string name="app_name">Res Menu</string>
    <string name="welcome_message">WELCOME</string>
    <string name="hint_id">  Restaurent Id</string>
    <string name="hint_pass">Password</string>
    <string name="forgot_password">Forgot password?      </string>
    <string name="txt_login">LOG IN</string>
    <string name="txt_live_table">Live Table</string>
    <string name="txt_note">Note :-</string>
</resources>
