<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/all_margin"
    tools:context=".activity.MainActivity">

    <com.resmenu.customViews.CustomTextView
        android:id="@+id/txt_view_welcome_messsage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin"
        android:text="@string/welcome_message"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_view_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin"
        android:src="@mipmap/ic_launcher_round"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_view_welcome_messsage" />

  <android.support.design.widget.TextInputLayout
      android:id="@+id/til_restaurent_id"
      android:layout_marginTop="@dimen/top_margin"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/image_view_login">

      <android.support.design.widget.TextInputEditText
          android:id="@+id/et_restaurent_id"
          android:hint="@string/hint_id"
          app:fontType="gotham_medium"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          />

  </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_restaurent_password"
        android:layout_marginTop="@dimen/top_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_restaurent_id">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_restaurent_password"
            android:hint="@string/hint_pass"
            app:fontType="gotham_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </android.support.design.widget.TextInputLayout>

    <com.resmenu.customViews.CustomTextView
        android:id="@+id/forgot_pass"
        android:text="@string/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_restaurent_password"
        />

    <Button
        android:id="@+id/button_login"
        android:text="@string/txt_login"
        android:layout_marginTop="@dimen/top_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/forgot_pass"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
</android.support.constraint.ConstraintLayout>